--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="dog_image">Dog Image</string>
     <string name="clear_dogs">Clear Dogs!</string>
     <string name="dog_poster">Dog poster</string>
+    <string name="random_dog_generator">Random Dog Generator!</string>
 </resources>
